# capag-e

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  TODOLIST.md  docker-compose.yml  lembrete.txt
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0038_declared_account_snapshots.py
backend/app/: main.py
backend/app/api/: declared.py
backend/app/application/: declared_service.py
backend/app/assets/: README.md
backend/app/assets/methodology/: __init__.py  internal_methodology_rules.template.json
backend/app/assets/reference/: __init__.py  official_reference_accounts.template.json
backend/app/db/: __init__.py  session.py
backend/app/domain/: __init__.py  declared.py
backend/app/engine/methodology_matcher/: __init__.py  matcher.py
backend/app/export/: __init__.py  declared_excel.py
backend/app/repositories/: __init__.py  declared_snapshots.py
backend/app/schemas/: declared.py
backend/scripts/: seed_declared_demo.py
backend/tests/: test_app_bootstrap.py  test_assets_structure.py  test_declared_account_result.py  test_declared_api.py  test_declared_excel_export.py  test_declared_snapshots_repository.py  test_methodology_matcher.py  test_pytest_runner.py
docs/: architecture.md
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
logs/: LOG-001-criar-indice-e-convencao-de-tasks.md  LOG-002-auditar-estrutura-minima-repositorio.md  LOG-002A-descontinuar-reports-em-tasks-pendentes.md  LOG-003-criar-estrutura-backend-minima.md  LOG-011-auditar-fronteiras-de-camadas.md  (+42 more)
(+359 files in other folders)
