[project]
name = "capag-backend"
version = "0.1.0"
description = "Backend do CAPAG para analise CAPAG-E auditavel."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.10,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
test = [
    "httpx2>=2,<3",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
